==> madvoid/MSP430-Test/CCS Projects/SD/FatFS/diskio.c <==
#include <stdint.h>
#include <stdbool.h>
#include <msp430.h>
#include "diskio.h"		/* FatFs lower layer API */
#define DLY_US(n)       __delay_cycles(n * (MCLK_FREQUENCY / 1000000))   //Delay n microseconds
#define CMD0    (0x40+0)    	// GO_IDLE_STATE
#define CMD1    (0x40+1)    	// SEND_OP_COND
#define CMD8    (0x40+8)    	// SEND_IF_COND
#define CMD9    (0x40+9)    	// SEND_CSD
#define CMD10    (0x40+10)    	// SEND_CID
#define CMD12    (0x40+12)    	// STOP_TRANSMISSION
#define CMD16    (0x40+16)    	// SET_BLOCKLEN
#define CMD17    (0x40+17)    	// READ_SINGLE_BLOCK
#define CMD18    (0x40+18)    	// READ_MULTIPLE_BLOCK
#define CMD23    (0x40+23)    	// SET_BLOCK_COUNT
#define CMD24    (0x40+24)    	// WRITE_BLOCK
#define CMD25    (0x40+25)    	// WRITE_MULTIPLE_BLOCK
#define CMD41    (0x40+41)    	// SEND_OP_COND (ACMD)
#define CMD55    (0x40+55)    	// APP_CMD
#define CMD58    (0x40+58)    	// READ_OCR
#define SPI_SOMI        BIT6	// P2.6
#define SPI_SIMO        BIT5	// P2.5
#define SPI_CLK         BIT4	// P2.4
#define SD_CS           BIT4	// P3.4
#define SPI_SEL         P2SEL1
#define SPI_DIR         P2DIR
#define SD_CS_SEL       P3SEL1
#define SD_CS_OUT       P3OUT
#define SD_CS_DIR       P3DIR
#define SPI_REN         P2REN
#define SPI_OUT         P2OUT

static void SELECT (void){
	SD_CS_OUT &= ~SD_CS;
}

static void DESELECT (void){
	SD_CS_OUT |= SD_CS;
}

static void xmit_spi(BYTE dat){
	uint16_t gie = __get_SR_register() & GIE;	// Save interrupt state
	__disable_interrupt();				// Disable interrupts

	while(!(UCA1IFG & UCTXIFG));			// Wait for TX ready
	UCA1TXBUF = dat;				// Write byte
	while(UCA1STATW & UCBUSY);

	UCA1RXBUF;					// Read to empty RX buffer, clear any ovverrun

	__bis_SR_register(gie);				// Reload interrupt state
}

static BYTE rcvr_spi (void){
	uint8_t ui8RcvDat;				// Receive variable

	uint16_t gie = __get_SR_register() & GIE;	// Save interrupt state
	__disable_interrupt();

	UCA1IFG &= ~UCRXIFG;				// Ensure RXIFG clear
	while(!(UCA1IFG & UCTXIFG));			// Wait for TX ready
	UCA1TXBUF = 0xFF;				// Send dummy byte
	while(!(UCA1IFG & UCRXIFG));			// Wait for RX buffer

	ui8RcvDat = UCA1RXBUF;				// Read RX buffer

	return (BYTE)ui8RcvDat;
}

static void power_on (void){
	/*
	* This doesn't really turn the power on, but initializes the
	* SSI port and pins needed to talk to the card.
	*/

	//Port initialization for SD Card operation
	SPI_SEL |= SPI_CLK | SPI_SOMI | SPI_SIMO;
	SPI_DIR |= SPI_CLK | SPI_SIMO;
	SD_CS_SEL &= ~SD_CS;
	SD_CS_OUT |= SD_CS;
	SD_CS_DIR |= SD_CS;

	SPI_REN |= SPI_SOMI | SPI_SIMO;
	SPI_OUT |= SPI_SOMI | SPI_SIMO;

	//Initialize USCI_A1 for SPI Master operation
	UCA1CTLW0 |= UCSWRST;                                    //Put state machine in reset
	UCA1CTLW0 = UCCKPL | UCMSB | UCMST | UCMODE_0 | UCSYNC;  //3-pin, 8-bit SPI master
	//Clock polarity select - The inactive state is high
	//MSB first
	UCA1CTLW0 = UCSWRST | UCSSEL_2;                          //Use SMCLK, keep RESET
	UCA1BR0 = 3;                                           //Initial SPI clock must be <400kHz
	UCA1BR1 = 0;                                            //f_UCxCLK = 1MHz/(3+1) = 250kHz
	UCA1CTLW0 &= ~UCSWRST;                                   //Release USCI state machine
	UCA1IFG &= ~UCRXIFG;

	// Set DI and CS high and apply more than 74 pulses to SCLK for the card
	// to be able to accept a native command.
	send_initial_clock_train();

	PowerFlag = 1;
}

static void set_max_speed(void){
    UCA1CTLW0 |= UCSWRST;                                    //Put state machine in reset
    UCA1BR0 = 0;                                            //f_UCxCLK = 1MHz/(0+1) = 1MHz
    UCA1BR1 = 0;
    UCA1CTLW0 &= ~UCSWRST;                                   //Release USCI state machine
}
